2004-04-01  Jody Goldberg <jody@gnome.org>

	* configure.in : We'll keep bumping it until we get it right

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-31  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.6.1.

2004-03-31  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.6.0.2.

2004-03-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.in:
	* gnome-settings-daemon/actions/Makefile.am:
          check for GStreamer 0.8 properly
          make sure -gstreamer files get disted for gnome-settings-daemon
          re-enable GStreamer by default since #131316 got fixed

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-25  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-23  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-16  Jody Goldberg <jody@gnome.org>

	* configure.in : require libxklavier 1.0 to get a few crashers fixed

2004-03-11  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* help/es: Added Spanish help

2004-02-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Disable GStreamer by default until #131316 gets
	fixed

2004-02-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in: check for GStreamer, make it possible to disable
	ALSA support even if the libraries are there

2004-02-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "en_CA" to ALL_LINGUAS.

2004-02-07  Dennis Cranston  <dennis_cranston at yahoo com>

	* capplets/display/main.c: (create_dialog): Fix alignment of Options
	category. (#133715).
