@@ -1,3 +1,8 @@
+2004-04-08  Jody Goldberg <jody@gnome.org>
+
+	* libbackground/applier.c (egg_pixbuf_new_from_file_at_size) :
+	  disable translation until after gnome-2-6 branch
+
 2004-04-01  Jody Goldberg <jody@gnome.org>
 
 	* configure.in : We'll keep bumping it until we get it right
